<resources>
    <string name="app_name">NewsApp</string>
    <string name="no_news">No news found.</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>

    <string name="settings_from_date_label">From Date</string>
    <string name="settings_from_date_key" translatable="false">from_date</string>
    <string name="settings_from_date_default" translatable="false">2018-07-11</string>

    <string name="settings_to_date_label">To date</string>
    <string name="settings_to_date_key" translatable="false">to_date</string>
    <string name="settings_to_date_default" translatable="false">2018-07-11</string>

    //the subject to search about
    //the default is empty and no specific subject
    <string name="settings_query_label">Subject</string>
    <string name="settings_query_key" translatable="false">subject</string>
    <string name="settings_query_default" translatable="false"></string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>

    <!-- Label for order-by newest option [CHAR LIMIT=20] -->
    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <!-- Label for order-by oldest option [CHAR LIMIT=20] -->
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

    <!-- Label for order-by relevance option [CHAR LIMIT=20] -->
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>
</resources>
